// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bigint > basic 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/BigintSchema",
    "definitions": {
        "BigintSchema": {
            "type": "integer"
        }
    }
}"
`;

exports[`bigint > coerce on input 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/BigintSchema",
    "definitions": {
        "BigintSchema": {
            "anyOf": [
                {
                    "type": "integer"
                },
                {
                    "type": "string"
                }
            ]
        }
    }
}"
`;
